--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cards",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
     "angular": "^1.3.14",
+    "bluebird": "^2.9.13",
     "connect-flash": "^0.1.1",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
